<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="60sp">

        <RadioButton
            android:id="@+id/rdbRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rojo" />

        <RadioButton
            android:id="@+id/rdbVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/verde" />

        <RadioButton
            android:id="@+id/rdbAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/azul" />

    </RadioGroup>

    <TextView
        android:id="@+id/lblEstilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estilo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="60dp">

        <CheckBox
            android:id="@+id/ckbNegrita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negrita" />

        <CheckBox
            android:id="@+id/ckbCursiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursiva" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_de_prueba"
        android:textAlignment="center"
        android:textColor="@color/respuesta"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swtObscuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo_obscuro"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swtInfoLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/informaci_n_log"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>